--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "iot-monitor",
   "version": "1.0.0",
-  "description": "",
+  "description": "\"# iot-monitor\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +15,13 @@
     "cors": "^2.8.6",
     "express": "^5.2.1",
     "mongoose": "^9.2.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mopidevisravya9-spec/iot-monitor.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mopidevisravya9-spec/iot-monitor/issues"
+  },
+  "homepage": "https://github.com/mopidevisravya9-spec/iot-monitor#readme"
 }
